aws-cel/require-encryption-aws-loadbalancers/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-encryption-aws-loadbalancers
status:
  ready: true
