aws-cel/require-encryption-aws-loadbalancers/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: require-encryption-aws-loadbalancers
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../require-encryption-aws-loadbalancers.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: require-encryption-aws-loadbalancers
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: service-fail.yaml
    - apply:
        file: service-pass.yaml
    - apply:
        file: service-skip.yaml
